# gumbo_client

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  all_install.sh  all_tests.sh  install_prereqs.sh  pyproject.toml  setup.cfg
.github/workflows/: run_checks.yaml
api/: .gitignore  README.md  app.yaml.template  deploy.py  gumbo_schema.py  main.py  pyproject.toml  regenerate_schema.py  requirements.txt  sqlpath.py
client/: requirements.txt
client/gumbo_client/: name_mapping.json  utils.py
client/tests/: utils_test.py
client_api/: README.md  client.py  deploy.sh  main.py  pyproject.toml  requirements.txt  test.py
client_api/data_access/: gumbo_data_access.py
dataframe-json-packing/: README.md  pyproject.toml
dataframe-json-packing/dataframe_json_packing/: __init__.py  df_serialization.py
dataframe-json-packing/tests/: serialization_test.py
gumbo-client-example/: README.md  pyproject.toml  sample.py
gumbo-dao/: README.md  pyproject.toml
gumbo-dao/gumbo_dao/: __init__.py  gumbo_dao.py  name_mapping.json  status.py  utils.py
gumbo-dao/tests/: client_test.py  status_test.py  test_gumbo_dao.py  utils_test.py
gumbo-gql-service/: .env.dist  README.md  deploy.sh  docker-compose.yml
gumbo-rest-client/: README.md  pyproject.toml
gumbo-rest-client/gumbo_client/: __init__.py  rest_client.py
gumbo-rest-client/gumbo_rest_client/: __init__.py  auth.py  const.py  exceptions.py  name_mapping.json  rest_client.py  utils.py
gumbo-rest-client/tests/: functional_test.py  sample.py  test_rest_client.py  utils_test.py
gumbo-rest-service/: .gcloudignore  README.md  app.yaml.template  deploy  pyproject.toml
gumbo-rest-service/gumbo_rest_service/: main.py  status.py
gumbo-rest-service/tests/: rest_api_test.py
gumbo_client/: __init__.py  api_client.py  client.py  client_v2.py  cloud_sql_proxy.py  gumbo_dao.py  name_mapping.json  status.py
query-service/: .gcloudignore  .gitignore  README.md  app.yaml.template  deploy.py  main.py  pyproject.toml
rest_api/: README.md  data_access.py  deploy.sh  main.py  requirements.txt
rest_api/data_access/: gumbo_data_access.py
tests/: client_test.py  status_test.py  utils_test.py
