[tool.poetry]
name = "gumbo-client"
version = "0.2.1"
description = ""
authors = ["Sarah Wessel <swessel@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "gumbo_client"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
psycopg2-binary = "^2.9.0"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
