[tool.poetry]
name = "gumbo-client"
version = "0.4.2"
description = ""
authors = ["Sarah Wessel <swessel@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "gumbo_client"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
google-auth = "^2.22.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
