[tool.poetry]
name = "gumbo-api"
version = "0.1.0"
description = ""
authors = ["Philip Montgomery <pmontgom@broadinstitute.org>"]

[tool.poetry.dependencies]
python = "^3.10"
#gumbo-client = {path = "../client"}
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
