[tool.poetry]
name = "client-api"
version = "0.1.0"
description = "API used by the gumbo client python library"
authors = ["Sarah Wessel <swessel@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "client_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
pandas = "^2.0.3"
uvicorn = "^0.23.2"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
