[tool.poetry]
name = "gumbo-rest-client"
version = "2.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gumbo_rest_client"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pytest = "^7.4.4"
google-auth = "^2.26.2"
pandas = "^1.4"
# dataframe-json-packing = {path = "../dataframe-json-packing", develop = true}
dataframe-json-packing = {version = "^0.2.0", source = "public-python"}

[tool.poetry.group.dev.dependencies]
# gumbo-rest-service = {path = "../gumbo-rest-service", develop = true}
httpx = "^0.26.0"
pyright = "^1.1.347"
gumbo-rest-service = {version = "^2.1.0", source = "public-python"}


[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
