[tool.poetry]
name = "gumbo-rest-service"
version = "2.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gumbo_rest_service"}]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.9"
pandas = "^1.1.0"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
#gumbo-dao = {path = "../gumbo-dao", develop = true}
#dataframe-json-packing = {path = "../dataframe-json-packing", develop = true}
gunicorn = "^21.2.0"
uvicorn = "^0.26.0"
google-auth = "^2.26.2"
gumbo-dao = {version = "^0.1.0", source = "public-python"}
dataframe-json-packing = {version = "^0.2.0", source = "public-python"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
pyright = "^1.1.347"


[[tool.poetry.source]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
