[tool.poetry]
name = "query-service"
version = "0.1.0"
description = ""
authors = ["Philip Montgomery <pmontgom@broadinstitute.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
psycopg2-binary = "^2.9.9"
pandas = "^2.3.0"
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
